#### Don't forget to change the version number in configure.ac! ####

01 Dec 2003 Signal Quiesce (shutdown) & ssd command - Jan Jaeger
29 Nov 2003 Fix race condition in console.c recv_3270_data causing 100%
            CPU utilization, zero MIPS" Hercules hang symptom (version
            in configure.ac version bumped to 3.00a.5) - Fish
29 Nov 2003 Fix "passing arg n of <function> from incompatible pointer type"
            warnings in codepage.c, dat.h, stack.c, xstore.c - Fish
29 Nov 2003 Fix reset_channel_path - Mark Drummond by Greg Smith
28 Nov 2003 Flush Buffer On lost data condition in 2703 handler - Ivan Warren
27 Nov 2003 CTCI/LCS: fix enqueue full frame buffer loop; enable thread
            joining at LCS close - Fish
26 Nov 2003 Performance enhancements for CLM/ICM/STCM and XC - Greg Smith
26 Nov 2003 ia32 assists for virtual store memcpy - Greg Smith
26 Nov 2003 console.c: ignore "Negotiate About Window Size" from telnet
            client so e.g. WinNT telnet client works - Greg Price by Fish
26 Nov 2003 Add missing 'filename' initialization for CTCI devices - Fish
26 Nov 2003 Enable thread joining logic in logger_term - Fish
24 Nov 2003 Fixed fthreads: basically almost a complete rewrite, involving
            thread joining support and & mutex attribute support; version
            number in configure.ac bumped to 3.00a.3 - Fish
23 Nov 2003 TLB fixes - Greg Smith
18 Nov 2003 ptt trace updates - Fish & Greg Smith
17 Nov 2003 Bypass garbage collection if not opened read/write - Greg Smith
13 Nov 2003 Additional checks for pending attention interrupt - Greg Smith
11 Nov 2003 bumped configure.ac version to 3.00a.2 just for fun - Fish
11 Nov 2003 fix hst command history logic buffer overflow bug - Fish
11 Nov 2003 ieee.c floating point fixes: fix bug in FP_INFINITE, FP_NAN,
            and FP_ZERO handling for CFDBR, CFEBR, CGDBR, and CGEBR,
            fix int divide by zero crash preceded by msg "lbfpston: