@@ -36,7 +36,7 @@ if BUILD_FTHREADS
   FISHIO      = $(fishio_SRC)
   LIBFTHREADS = libfthreads.la
   FHOSTINFO   = hostinfo.c
-  HOSTINFO    = 
+  HOSTINFO    =
 if BUILD_FISHHANG
     FISHHANG  = $(fishhang_SRC)
 else
@@ -153,7 +153,7 @@ endif
              libhercd.la
 
   HERCLIBS2 = libhercs.la \
-              libherc.la 
+              libherc.la
 
   HERCMODS = dyngui.la  \
              dyninst.la \
@@ -205,23 +205,23 @@ if OPTION_DYNAMIC_LOAD
   dyninst_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   dyninst_la_LIBADD  = $(DYNMOD_LD_ADD)
 
-  hdteq_la_SOURCES   = hdteq.c 
+  hdteq_la_SOURCES   = hdteq.c
   hdteq_la_LDFLAGS   = $(DYNMOD_LD_FLAGS)
   hdteq_la_LIBADD    = $(DYNMOD_LD_ADD)
 
-  hdt1403_la_SOURCES = printer.c 
+  hdt1403_la_SOURCES = printer.c
   hdt1403_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   hdt1403_la_LIBADD  = $(DYNMOD_LD_ADD)
 
-  hdt2703_la_SOURCES = commadpt.c 
+  hdt2703_la_SOURCES = commadpt.c
   hdt2703_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   hdt2703_la_LIBADD  = $(DYNMOD_LD_ADD)
 
-  hdt3088_la_SOURCES = ctc_lcs.c ctc_ctci.c ctcadpt.c w32ctca.c tuntap.c 
+  hdt3088_la_SOURCES = ctc_lcs.c ctc_ctci.c ctcadpt.c w32ctca.c tuntap.c
   hdt3088_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   hdt3088_la_LIBADD  = $(DYNMOD_LD_ADD)
 
-  hdt3270_la_SOURCES = console.c 
+  hdt3270_la_SOURCES = console.c
   hdt3270_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   hdt3270_la_LIBADD  = $(DYNMOD_LD_ADD)
 
@@ -229,11 +229,11 @@ if OPTION_DYNAMIC_LOAD
   hdt3420_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   hdt3420_la_LIBADD  = $(DYNMOD_LD_ADD) libherct.la
 
-  hdt3505_la_SOURCES = cardrdr.c sockdev.c 
+  hdt3505_la_SOURCES = cardrdr.c sockdev.c
   hdt3505_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   hdt3505_la_LIBADD  = $(DYNMOD_LD_ADD)
 
-  hdt3525_la_SOURCES = cardpch.c 
+  hdt3525_la_SOURCES = cardpch.c
   hdt3525_la_LDFLAGS = $(DYNMOD_LD_FLAGS)
   hdt3525_la_LIBADD  = $(DYNMOD_LD_ADD)
 
@@ -316,6 +316,7 @@ endif
                        config.c    \
                        panel.c     \
                        history.c   \
+                       fillfnam.c  \
                        ipl.c       \
                        assist.c    \
                        dat.c       \
@@ -365,7 +366,7 @@ endif
                              $(dyndev_SRC)   \
                              ltdl.c
 
-  libherc_la_LDFLAGS = $(LIB_LD_FLAGS) 
+  libherc_la_LDFLAGS = $(LIB_LD_FLAGS)
 
   libherc_la_LIBADD = libhercs.la    \
                       libhercu.la    \
@@ -378,7 +379,7 @@ endif
 # THIS is the hercules executable.
 #      hdlmain.c is requires so that dlopen(self) retrieves
 #                the 'main' hdl symbols
-# 
+#
 
 if OPTION_DYNAMIC_LOAD
 
@@ -440,84 +441,84 @@ hercifc_LDADD         = $(LDADD)
 hercifc_LDFLAGS       = $(tools_LD_FLAGS)
 endif
 
-dasdinit_SOURCES      = dasdinit.c 
-dasdinit_LDADD        = $(tools_ADDLIBS)   
+dasdinit_SOURCES      = dasdinit.c
+dasdinit_LDADD        = $(tools_ADDLIBS)
 dasdinit_LDFLAGS      = $(tools_LD_FLAGS)
 
 dasdisup_SOURCES      = dasdisup.c
-dasdisup_LDADD        = $(tools_ADDLIBS)   
+dasdisup_LDADD        = $(tools_ADDLIBS)
 dasdisup_LDFLAGS      = $(tools_LD_FLAGS)
 
 dasdload_SOURCES      = dasdload.c
-dasdload_LDADD        = $(tools_ADDLIBS)   
+dasdload_LDADD        = $(tools_ADDLIBS)
 dasdload_LDFLAGS      = $(tools_LD_FLAGS)
 
 dasdls_SOURCES        = dasdls.c
-dasdls_LDADD          = $(tools_ADDLIBS)   
+dasdls_LDADD          = $(tools_ADDLIBS)
 dasdls_LDFLAGS        = $(tools_LD_FLAGS)
 
 dasdcat_SOURCES       = dasdcat.c
-dasdcat_LDADD         = $(tools_ADDLIBS)   
+dasdcat_LDADD         = $(tools_ADDLIBS)
 dasdcat_LDFLAGS       = $(tools_LD_FLAGS)
 
 dasdpdsu_SOURCES      = dasdpdsu.c
-dasdpdsu_LDADD        = $(tools_ADDLIBS)   
+dasdpdsu_LDADD        = $(tools_ADDLIBS)
 dasdpdsu_LDFLAGS      = $(tools_LD_FLAGS)
 
-dasdseq_SOURCES       = dasdseq.c 
-dasdseq_LDADD         = $(tools_ADDLIBS)   
+dasdseq_SOURCES       = dasdseq.c
+dasdseq_LDADD         = $(tools_ADDLIBS)
 dasdseq_LDFLAGS       = $(tools_LD_FLAGS)
 
 tapecopy_SOURCES      = tapecopy.c
-tapecopy_LDADD        = $(tools_ADDLIBS)   
+tapecopy_LDADD        = $(tools_ADDLIBS)
 tapecopy_LDFLAGS      = $(tools_LD_FLAGS)
 
 tapemap_SOURCES       = tapemap.c
-tapemap_LDADD         = $(tools_ADDLIBS)   
+tapemap_LDADD         = $(tools_ADDLIBS)
 tapemap_LDFLAGS       = $(tools_LD_FLAGS)
 
 tapesplt_SOURCES      = tapesplt.c
-tapesplt_LDADD        = $(tools_ADDLIBS)   
+tapesplt_LDADD        = $(tools_ADDLIBS)
 tapesplt_LDFLAGS      = $(tools_LD_FLAGS)
 
 cckdcdsk_SOURCES      = cckdcdsk.c
-cckdcdsk_LDADD        = $(tools_ADDLIBS)   
+cckdcdsk_LDADD        = $(tools_ADDLIBS)
 cckdcdsk_LDFLAGS      = $(tools_LD_FLAGS)
 
 cckdcomp_SOURCES      = cckdcomp.c
-cckdcomp_LDADD        = $(tools_ADDLIBS)   
+cckdcomp_LDADD        = $(tools_ADDLIBS)
 cckdcomp_LDFLAGS      = $(tools_LD_FLAGS)
 
 cckddiag_SOURCES      = cckddiag.c
-cckddiag_LDADD        = $(tools_ADDLIBS)   
+cckddiag_LDADD        = $(tools_ADDLIBS)
 cckddiag_LDFLAGS      = $(tools_LD_FLAGS)
 
 dasdcopy_SOURCES      = dasdcopy.c
-dasdcopy_LDADD        = $(tools_ADDLIBS)   
+dasdcopy_LDADD        = $(tools_ADDLIBS)
 dasdcopy_LDFLAGS      = $(tools_LD_FLAGS)
 
 cckdswap_SOURCES      = cckdswap.c
-cckdswap_LDADD        = $(tools_ADDLIBS)   
+cckdswap_LDADD        = $(tools_ADDLIBS)
 cckdswap_LDFLAGS      = $(tools_LD_FLAGS)
 
 hetget_SOURCES        = hetget.c
-hetget_LDADD          = $(tools_ADDLIBS)   
+hetget_LDADD          = $(tools_ADDLIBS)
 hetget_LDFLAGS        = $(tools_LD_FLAGS)
 
 hetinit_SOURCES       = hetinit.c
-hetinit_LDADD         = $(tools_ADDLIBS)   
+hetinit_LDADD         = $(tools_ADDLIBS)
 hetinit_LDFLAGS       = $(tools_LD_FLAGS)
 
 hetmap_SOURCES        = hetmap.c
-hetmap_LDADD          = $(tools_ADDLIBS)   
+hetmap_LDADD          = $(tools_ADDLIBS)
 hetmap_LDFLAGS        = $(tools_LD_FLAGS)
 
 hetupd_SOURCES        = hetupd.c
-hetupd_LDADD          = $(tools_ADDLIBS)   
+hetupd_LDADD          = $(tools_ADDLIBS)
 hetupd_LDFLAGS        = $(tools_LD_FLAGS)
 
 dmap2hrc_SOURCES      = dmap2hrc.c
-dmap2hrc_LDADD        = $(tools_ADDLIBS)   
+dmap2hrc_LDADD        = $(tools_ADDLIBS)
 dmap2hrc_LDFLAGS      = $(tools_LD_FLAGS)
 
 #
@@ -538,7 +539,7 @@ EXTRA_DIST =   \
              RELEASE.NOTES
 
 #
-# Source Header files. No 'build' for those 
+# Source Header files. No 'build' for those
 #
 noinst_HEADERS = fishhang.h \
                  hostinfo.h \
@@ -616,7 +617,7 @@ if SETUID_HERCIFC
 	rm                             hercifc
 endif
 
-install-exec-hook: 
+install-exec-hook:
 	rm -f $(DESTDIR)$(libdir)/libherc*.a
 	rm -f $(DESTDIR)$(modexecdir)/dyn*.a
 	rm -f $(DESTDIR)$(modexecdir)/hdt*.a
